--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@next/env": "^15.2.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@splinetool/react-spline": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.479.0",
     "motion": "^12.4.11",
     "next": "15.2.1",
