--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@splinetool/react-spline": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.5.0",
     "geist": "^1.3.1",
     "gsap": "^3.12.7",
     "lucide-react": "^0.479.0",
